--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  margin: 0px ;
-  box-sizing: border-box;
+@layer base {
+  html,
+  body {
+    margin: 0px;
+    box-sizing: border-box;
+  }
+}
+
+@layer components {
+
+  .inputFieldStyle {
+    @apply outline-none border-t-0 border-r-0 border-l-0 border-b-[1px] border-black rounded-none pl-0 pr-7 text-black text-base focus:ring-0 focus:border-b-black block w-full p-[12px] bg-transparent placeholder:text-black/60;
+  }
+  .btn-primary {
+    @apply py-4 px-6 bg-yellow-300 rounded-full font-bold text-base w-full;
+  }
 }
